; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-write-to-half-open-connection.c_read_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-write-to-half-open-connection.c_read_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"read_cb error: %s\0A\00", align 1
@UV_ECONNRESET = common dso_local global i64 0, align 8
@UV_EOF = common dso_local global i64 0, align 8
@tcp_server = common dso_local global i32 0, align 4
@tcp_peer = common dso_local global i32 0, align 4
@read_cb_called = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32*)* @read_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_cb(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %27

9:                                                ; preds = %3
  %10 = load i32, i32* @stderr, align 4
  %11 = load i64, i64* %5, align 8
  %12 = call i8* @uv_err_name(i64 %11)
  %13 = call i32 @fprintf(i32 %10, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @UV_ECONNRESET, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %21, label %17

17:                                               ; preds = %9
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* @UV_EOF, align 8
  %20 = icmp eq i64 %18, %19
  br label %21

21:                                               ; preds = %17, %9
  %22 = phi i1 [ true, %9 ], [ %20, %17 ]
  %23 = zext i1 %22 to i32
  %24 = call i32 @ASSERT(i32 %23)
  %25 = call i32 @uv_close(i32* @tcp_server, i32* null)
  %26 = call i32 @uv_close(i32* @tcp_peer, i32* null)
  br label %27

27:                                               ; preds = %21, %3
  %28 = load i32, i32* @read_cb_called, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* @read_cb_called, align 4
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @uv_err_name(i64) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_close(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
